# KinectDK

./: CMakeLists.txt  LICENSE  README.md
app/: Hello_world.cpp  capture_sensor_data.cpp  process_record.cpp  read_cal_data.cpp
include/: Kinect.h  KinectUtils.h
src/: Kinect.cpp  KinectUtils.cpp
